syntax = "proto3";
package transaction;

service Transaction {
    rpc ValidateTransaction (ValidateTxRequest) returns (ValidateTxResponse);
    rpc ProcessTransaction (ProcessTxRequest) returns (ProcessTxResponse);
}

message ValidateTxRequest {
    string tx_hex = 1; // Hex-encoded BSV transaction
}
message ValidateTxResponse {
    bool is_valid = 1;
    string error = 2; // Error message if validation fails
}
message ProcessTxRequest {
    string tx_hex = 1; // Hex-encoded BSV transaction
}
message ProcessTxResponse {
    bool success = 1;
    string error = 2; // Error message if processing fails
}
